--- a/css/main.css
+++ b/css/main.css
@@ -715,7 +715,6 @@ body {
   top: 8px;
   right: 8px;
   background-color: var(--background-color);
-  fill: var(--background-color);
 }
 
 .modal__window-icon {
@@ -724,6 +723,7 @@ body {
   border-radius: 50%;
   -webkit-transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  fill: var(--text-logo-color);
 }
 .modal__close:hover .modal__window-icon {
   fill: var(--accent-text-color);
