--- a/sass/layouts/_modal-window.scss
+++ b/sass/layouts/_modal-window.scss
@@ -29,7 +29,7 @@
       top: 8px;
       right: 8px;
       background-color: var(--background-color);
-      fill: var(--background-color);
+      
 
   }
 
@@ -38,6 +38,7 @@
       border: 1px solid var(--features-background-color);
       border-radius: 50%;
       transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+      fill: var(--text-logo-color);
     .modal__close:hover & {
             fill: var(--accent-text-color);
         }
